# tribev2

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/cortex/: diff.py  inference.py  main.py  rois.py  schemas.py
docs/: colab-runbook.md  notebook-walkthrough.md  tribe-v2-application-thesis.md  tribe-v2-overview.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
