[project]
name = "cortex"
version = "0.1.0"
description = "In-silico creative pre-test API on top of Meta TRIBE v2 (research / non-commercial use only)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Research / non-commercial — matches the CC BY-NC TRIBE v2 weights" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "numpy>=1.26",
    "nibabel>=5.2",
    "python-multipart>=0.0.9",
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.ruff]
line-length = 100
target-version = "py310"
